# Basic-Bouncing-Circles

./: README.md  main.cc  package-lock.json  test.cc
.cache/clangd/index/: ball.hpp.F90C41B9F218E16D.idx  main.cc.79C8C17E0CF31917.idx
BouncingBalls_CollisionWithEachOther/: CMakeLists.txt  ball.hpp  main.cc
BouncingBalls_Simple/: CMakeLists.txt  README.md
CameraTrackingCircle/: CMakeLists.txt  ball.hpp  main.cc
CollisionWithEachOther/: CMakeLists.txt  ball.hpp  main  main.cc
Obsidian/Bouncing Balls/: Physics engine thingy.md
Obsidian/Bouncing Balls/.obsidian/: workspace.json
Simple/: CMakeLists.txt  ball.hpp  main.cc
all_exes/: BouncingBallsWithCollisionOnEachOther  CameraTrackingCircle
all_webs/: index.html  style.css
all_webs/BouncingBallsWithCollisionOnEachOther/: game.html  game.js  game.wasm  shell.html
all_webs/CameraTrackingCircle/: game.html  game.js  game.wasm  shell.html
all_webs/Simple/: game.html  game.js  game.wasm  shell.html
